--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "swiper": "^8.0.7",
     "vue": "^3.2.25"
   },
   "devDependencies": {
