--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "less": "^4.1.2",
     "swiper": "^8.0.7",
     "vue": "^3.2.25"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^2.3.0",
+    "less-loader": "^7.3.0",
     "vite": "^2.9.0"
   }
 }
